--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="get_message_1">Get Message 1</string>
     <string name="exception_raised">Exception raised!</string>
     <string name="get_message_2">Get Message 2</string>
+    <string name="get_message_original">Get Message Original</string>
 </resources>
